<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="SENDER_ID">Put your project Sender id</string>
    <string name="notifications_admin_channel_name">Android4Dev</string>
    <string name="service_domain">http://150.242.140.105:8014/metal/api/v1/</string>
    <string name="service_domain1">http://150.242.140.105:8014/</string>
    <string name="socket_domain">https://b1.dbnix.ai/chatbot/newapi/</string>
    <string name="app_name">METAL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_network_gallery">NetworkGalleryActivity</string>
    <string name="title_activity_sd_card_gallery">SdCardGalleryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_logo">NEW LAUNCH</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="link"><a href="">Forgot Password</a></string>
    <string name="advertisement">Advertisement</string>
    <string name="new_launch">New Launch</string>
    <string name="image_dialog_delete_success">Image deleted successfully.</string>
    <string name="image_dialog_warning_message">Are you sure you want to delete this image ?</string>
    <string-array name="time">
        <item>Select Time</item>
        <item>Hours</item>
        <item>Minutes</item>
    </string-array>
    <string-array name="Meeting_type">
        <item>Select Type</item>
        <item>Standard</item>
        <item>Executive</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>@string/Home</item>
        <item>@string/Mark_Attendance</item>
        <item>@string/DashBoard</item>
        <item>@string/Settings</item>
        <item>@string/Contact_Us</item>
        <item>@string/About_Metal</item>
        <item>@string/Change_Password</item>
        
        
        
        
        
        
        
        
        

        

        <item>@string/Log_Out</item>

    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="Select_Language">Select Language</string>
    <string name="Please_Select_Language">Please Select Language</string>
    <string name="English">English</string>
    <string name="Hindi">हिन्दी</string>
    <string name="external_dir">GetSignature</string>
    <string name="title_activity_previous_order_new__s1">Previous_orderNew_S1</string>
    <string name="title_activity_previous_order_new__s2">Previous_orderNew_S2</string>
    <string name="title_activity_previous_order_new__s3">Previous_orderNew_S3</string>
    <string name="action_add_favourite">Sync</string>
    <string name="action_play_next">Delete</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="My_Activities">My Activities</string>
    <string name="Add_Customer">Add Customer</string>
    <string name="Required_by">Required by</string>
    <string name="company_name">© 2014, Simple Logic IT Pvt. Ltd.</string>
    <string name="email_id_hint">Email Id</string>
    <string name="OK_Button_label">OK</string>
    <string name="No_Button_label">No</string>
    <string name="Quick_Order">Quick Order</string>
    <string name="Smart_Order">Smart Order</string>
    <string name="Email_ID_validation_Toast">Please Enter Email Id</string>
    <string name="Server_Error">Some server error occurred. Please Contact IT team.</string>
    <string name="device_register_message">Your Device Already Register.</string>
    <string name="internet_connection_error">You don\'t have internet connection.</string>
    <string name="server_url_hint">Enter Server Url</string>
    <string name="server_url_dilog_title">If you want to change application server url, you have to clear app data, Press ok button for clear app data.</string>
    <string name="url_validation_message">Enter url not a valid url.</string>
    <string name="url_athentication_check_messagen">Please wait, We are check your metal server authentication....</string>
    <string name="url_athentication_success_message">Your metal server authentication done successfully, Click Sign Up button for registration.</string>
    <string name="user_name_validation_message">Please Enter UserName</string>
    <string name="user_password_validation_message">Please Enter Password</string>
    <string name="device_not_found_message">Your Device id not found in database, Please register first.</string>
    <string name="server_continue_message">Do you want to continue with trackfieldsales.com ?</string>
    <string name="dialog_wait_message">Please wait Data Sync....</string>
    <string name="user_not_found_message">User not found, Please contact with it team.</string>
    <string name="Register_successfully_message">Register successfully.</string>
    <string name="first_sync_dialog_message">First Login of the day, Please wait for Data download...</string>
    <string name="password_not_match_message">Your Password doesnot match Please Try Again.</string>
    <string name="Credential_not_match_message">Your Credential doesnot match Please Try Again.</string>
    <string name="user_name_not_match_message">Your username doesnot match Please Try Again.</string>
    <string name="need_permission_message">Need Permissions</string>
    <string name="need_permission_setting_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="Are_you_sure_delete_this_order">Are you sure, you want to delete the Order?</string>
    <string name="GOTO_SETTINGS">GOTO SETTINGS</string>
    <string name="Cancel">Cancel</string>
    <string name="please_wait_dialog_messagen">Please wait....</string>
    <string name="Error_occurredd">Error occurred!</string>
    <string name="VISIT_REPORT">VISIT CUSTOMER</string>
    <string name="CALENDAR">CALENDAR</string>
    <string name="TARGET">TARGET</string>
    <string name="survey">SURVEY</string>
    <string name="TARGET_ANALYSIS">TARGET ANALYSIS</string>
    <string name="EXPENSES">EXPENSES</string>
    <string name="PRICE_AND_STOCK">PRICE AND STOCK</string>
    <string name="ADD_RETAILER">ADD RETAILER</string>
    <string name="ADD_RETAILERsmall">Add Retailer</string>
    <string name="MARKETING">Marketing</string>
    <string name="update_stock">UPDATE STOCK</string>
    <string name="customer_notfound_message">No customers found. Please try Sync or contact IT team</string>
    <string name="Menu">Menu</string>
    <string name="Attendance">Attendance</string>
    <string name="Mark_Attendance">Mark Attendance</string>
    <string name="Nearest_Customer">Nearest Customer</string>
    <string name="Location_On_Map">Location On Map</string>
    <string name="Beat_On_Map">Beat On Map</string>
    <string name="Schedule_List">Schedule List</string>
    <string name="Outstanding">Outstanding:</string>
    <string name="Outstandinglable">Outstanding</string>
    <string name="Order_List">Offline Order List</string>
    <string name="Return_Order_List">Return Order List</string>
    <string name="Cash_Deposit">Cash Deposit</string>
    <string name="HOME">HOME</string>
    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="About_Metal">About Metal</string>
    <string name="Change_skin">Change Skin</string>
    <string name="Change_Password">Change Password</string>
    <string name="Log_Out">Log Out</string>
    <string name="DashBoard">Dashboard</string>
    <string name="Dashboard">Home</string>
    <string name="Confirmation">Confirmation</string>
    <string name="alartinvoice">What would you like to do with the invoice?</string>
    <string name="Logout_warning_message">Are you sure you want to logout?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Target_dialog_message">Please wait Target Sync....</string>
    <string name="VISIT_RETAILER">VISIT RETAILER</string>
    <string name="VISIT_DISTRIBUTOR">VISIT DISTRIBUTOR</string>
    <string name="DAY_SCHEDULER">DAY SCHEDULER</string>
    <string name="ACTIVITY_PLANNER">ACTIVITY PLANNER</string>
    <string name="EXPENSE">Expenses</string>
    <string name="PRICE_STOCK">Price And Stock</string>
    <string name="Last_Sync_On">Last Sync</string>
    <string name="Total_Orders_Synced">Total Orders Synced</string>
    <string name="Check_Updates">Check Updates</string>
    <string name="Upload_Orders">Upload Orders</string>
    <string name="Upload_Data">Upload Data</string>
    <string name="Upload_Customers">Upload Customers</string>
    <string name="Last_Sync_Date">Last Sync Date : </string>
    <string name="Last_Sync_Time">Last Sync Time  : </string>
    <string name="sync_data">sync data</string>
    <string name="Add_Item_Sounds">Add Item Sound</string>
    <string name="Browses">Browse</string>
    <string name="About">About</string>
    <string name="Simple_Logic">Simple Logic</string>
    <string name="Metal_Description">METAL facilitates the field sales organisation to interact with their respective offices in a structured and efficient manner. Thus automating the activities of the field sales using this android based field sales automation tool. This will help you to have better outlook of your targets and achievers at the same time have well coordinated field sales operation.</string>
    <string name="Simple_Logic_full_name">Simple Logic IT Private Ltd.</string>
    <string name="Simple_Logic_address">401-402, Sai Enclave,
        C Wing Plot No.252 A. Hariyali Village, Vikhroli,
        Mumbai, Maharashtra 400083 India</string>
    <string name="Call_us">Call us :</string>
    <string name="Call">Call</string>
    <string name="Km">Km</string>
    <string name="Email_Us">Email Us :</string>
    <string name="Simplelogic_web_link">METAL by Simple Logic IT Pvt Ltd.</string>
    <string name="Address">Address: </string>
    <string name="Contact_not_found">Contact detail not found.</string>
    <string name="Contact">Contact</string>
    <string name="Select_City">Select City</string>
    <string name="Select_Beats">Select Beat</string>
    <string name="Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="Select_Categories">Select Category</string>
    <string name="Clear">Clear</string>
    <string name="Video">Video</string>
    <string name="ERemarks">Remarks</string>
    <string name="Name">Name</string>
    <string name="Please_Sign_below">Please Sign below ...</string>
    <string name="Continue">Continue</string>
    <string name="Device_not_registered">Device not registered</string>
    <string name="Qty">Qty</string>
    <string name="Enter_Amount">Enter Amount</string>
    <string name="Cash_In_Hand">Cash In Hand</string>
    <string name="Code">Code</string>
    <string name="Amount">Amount</string>
    <string name="Image">Image</string>
    <string name="Select_Retailer">Select Retailer</string>
    <string name="If_you_are_the">If you are the</string>
    <string name="administratorm">administrator, click here.</string>
    <string name="contact_administrator">Else contact administrator. </string>
    <string name="Price">Price</string>
    <string name="Customer_Outstanding">Customer Outstanding</string>
    <string name="Language">Language</string>
    <string name="SYNC">Sync</string>
    <string name="App_url">App Url</string>
    <string name="Skin">Skin</string>
    <string name="Chat">Chat</string>
</resources>