<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/home"
        android:title="@string/Home"/>

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/dashboard"
        android:title="@string/DashBoard"/>

    <item
        android:id="@+id/nav_attendance"
        android:icon="@drawable/attendance"
        android:title="@string/Attendance"/>
    <item
        android:id="@+id/quick_order"
        android:icon="@drawable/new_order_ham"
        android:title="@string/Quick_Order"/>
    <item
        android:id="@+id/Smart_order"
        android:icon="@drawable/smart_order_img"
        android:title="@string/Smart_Order"/>
    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/sync"
        android:title="@string/SYNC"/>
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/settings"
        android:title="@string/Settings"/>
    <item
        android:id="@+id/nav_appurl"
        android:visible="false"
        android:title="@string/App_url"/>
    <item
        android:id="@+id/nav_language"
        android:visible="false"
        android:title="@string/Language"/>
    <item
        android:id="@+id/nav_skin"
        android:visible="false"
        android:title="@string/Skin"/>
    <item
        android:id="@+id/nav_aboutmetal"
        android:visible="false"
        android:title="@string/About_Metal"/>
    <item
        android:id="@+id/nav_changepass"
        android:visible="false"
        android:title="@string/Change_Password"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/Log_Out"/>
</menu>