<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="130dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Device_not_registered"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/txt_h"
        android:text="@string/If_you_are_the"
        android:textColor="@color/black"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/txt_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/administratorm"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:layout_below="@+id/txt_de"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt_de2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/contact_administrator"
        android:layout_below="@+id/txt_click"
        android:textColor="@color/black"
        android:textSize="12dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="#8A0808"
            android:clickable="true"
            android:text="@string/OK_Button_label"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>