<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:text="@string/Add_Item_Sounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:visibility="gone"
        android:id="@+id/switch_appsound" />

    <Button
        android:text="@string/Browses"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginLeft="3dp"
        android:textSize="16dp"
        android:gravity="center"
        android:visibility="invisible"
        android:id="@+id/browse_btn" />

    <Button
        android:text="@string/Select_Language"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/mLanguage" />

</LinearLayout>
