<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:id="@+id/linearLayout245"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/yourName"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:hint="@string/Name"
            android:layout_marginTop="10dp"
            android:imeOptions="actionDone"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Please_Sign_below"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_below="@+id/linearLayout245"
        android:layout_above="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".12"
            android:text="@string/Cancel"
            android:layout_marginLeft="2dp"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".12"
            android:text="@string/Clear"
            android:layout_marginLeft="2dp"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".12"
            android:text="@string/Continue"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</RelativeLayout>