<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/h_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC">

    <LinearLayout
        android:id="@+id/dash_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="13dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Spinner
            android:id="@+id/cash_type"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/submit_to"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/Select_Categories"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cash_inhand"
            android:layout_width="fill_parent"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:enabled="false"
            android:textSize="16dp"
            android:textColor="#111111"
            android:hint="@string/Cash_In_Hand"
            android:inputType="number" />

        <EditText
            android:id="@+id/submit_amount"
            android:layout_width="fill_parent"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:textColor="#111111"
            android:hint="@string/Enter_Amount"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/Please_Sign_below"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" />

        <EditText
            android:id="@+id/submit_code"
            android:layout_width="fill_parent"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:textColor="#111111"
            android:hint="@string/Code"
            android:textSize="16dp"
            android:inputType="number" />

        <EditText
            android:id="@+id/submit_remark"
            android:layout_width="fill_parent"
            android:paddingLeft="10dp"
            android:digits="qwertzuiopasdfghjklyxcvbnm "
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#111111"
            android:hint="@string/ERemarks"
            android:textSize="16dp"
            android:inputType="textEmailAddress" />

        <ImageView
            android:id="@+id/cam_submit"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:visibility="gone"
            android:layout_gravity="right"
            android:layout_above="@+id/submit_clear"
            android:background="@drawable/cam_icon" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_clear"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/Clear"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/submit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:text="@string/Submit"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>


