<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/name"
        android:layout_width="@dimen/common_0_dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.4"
        android:textSize="8dp"
        android:textColor="?attr/hint_text_color"
        android:fontFamily="@font/work_sans"
        android:text="">

    </TextView>
    <TextView
        android:id="@+id/code"
        android:layout_width="@dimen/common_0_dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:textSize="8dp"
        android:gravity="center"
        android:textColor="?attr/hint_text_color"
        android:fontFamily="@font/work_sans"
        android:text="@string/Code">

    </TextView>
    <TextView
        android:id="@+id/quantity"
        android:layout_width="@dimen/common_0_dp"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:gravity="center"
        android:fontFamily="@font/work_sans"
        android:textColor="?attr/filter_short_text_color"
        android:layout_weight="0.9"
        android:text="@string/Qty">

    </TextView>
    <TextView
        android:id="@+id/price"
        android:layout_width="@dimen/common_0_dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:textSize="8sp"
        android:fontFamily="@font/work_sans"
        android:textColor="?attr/filter_short_text_color"
        android:gravity="center"
        android:text="@string/Price">

    </TextView>
    <TextView
        android:id="@+id/amount"
        android:layout_width="@dimen/common_0_dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:textSize="8sp"
        android:fontFamily="@font/work_sans"
        android:textColor="?attr/filter_short_text_color"
        android:gravity="center"
        android:text="@string/Amount">

    </TextView>


</LinearLayout>