<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!--<TextView-->
        <!--android:id="@+id/txtWelcomeUser"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="admin"-->
        <!--android:textColor="#FFFFFF"-->
      	<!--android:background="#BDBDBD"-->
        <!--android:gravity="center"-->
        <!--android:textSize="15sp"  >-->
    <!--</TextView>-->

    <Spinner
        android:id="@+id/cust_city"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/Select_City"
        android:inputType="textPassword"
        android:paddingTop="30dp" 
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/cust_beat"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/Select_Beats"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/cust_retailer"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/Select_Retailer"
        android:inputType="textPassword"
        android:paddingTop="30dp"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/customer_submit"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:background="#545454"
            android:text="@string/Submit"
            android:textColor="#ffffff" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >
        </ListView>

    </RelativeLayout>

</LinearLayout>